antlr4-python3-runtime-4.7.2/src/autogen/CymbolParser.py
# Generated from antlr4-python3-runtime-4.7.2/src/autogen/Cymbol.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class CymbolParser ( Parser ):

    grammarFileName = "Cymbol.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'int'", "'void'", "'if'", "'else'", "'return'", 
                     "'('", "')'", "','", "';'", "'{'", "'}'", "'='", "'=='", 
                     "'!='", "'!'", "'>'", "'<'", "'>='", "'<='", "'*'", 
                     "'/'", "'+'", "'-'" ]

    symbolicNames = [ "<INVALID>", "TYPEINT", "TYPEVOID", "IF", "ELSE", 
                      "RETURN", "LP", "RP", "COMMA", "SEMICOLON", "LB", 
                      "RB", "AS", "EQ", "NE", "NOT", "GT", "LT", "GE", "LE", 
                      "MUL", "DIV", "PLUS", "MINUS", "ID", "INT", "BLOCKCOMMENT", 
                      "LINECOMMENT", "WS" ]

    RULE_fiile = 0
    RULE_varDecl = 1
    RULE_tyype = 2
    RULE_funcDecl = 3
    RULE_paramTypeList = 4
    RULE_paramType = 5
    RULE_block = 6
    RULE_assignStat = 7
    RULE_returnStat = 8
    RULE_ifElseStat = 9
    RULE_ifElseExprStat = 10
    RULE_exprStat = 11
    RULE_exprList = 12
    RULE_ifStat = 13
    RULE_elseStat = 14
    RULE_stat = 15
    RULE_expr = 16

    ruleNames =  [ "fiile", "varDecl", "tyype", "funcDecl", "paramTypeList", 
                   "paramType", "block", "assignStat", "returnStat", "ifElseStat", 
                   "ifElseExprStat", "exprStat", "exprList", "ifStat", "elseStat", 
                   "stat", "expr" ]

    EOF = Token.EOF
    TYPEINT=1
    TYPEVOID=2
    IF=3
    ELSE=4
    RETURN=5
    LP=6
    RP=7
    COMMA=8
    SEMICOLON=9
    LB=10
    RB=11
    AS=12
    EQ=13
    NE=14
    NOT=15
    GT=16
    LT=17
    GE=18
    LE=19
    MUL=20
    DIV=21
    PLUS=22
    MINUS=23
    ID=24
    INT=25
    BLOCKCOMMENT=26
    LINECOMMENT=27
    WS=28

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class FiileContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CymbolParser.FuncDeclContext)
            else:
                return self.getTypedRuleContext(CymbolParser.FuncDeclContext,i)


        def varDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CymbolParser.VarDeclContext)
            else:
                return self.getTypedRuleContext(CymbolParser.VarDeclContext,i)


        def EOF(self):
            return self.getToken(CymbolParser.EOF, 0)

        def getRuleIndex(self):
            return CymbolParser.RULE_fiile

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFiile" ):
                return visitor.visitFiile(self)
            else:
                return visitor.visitChildren(self)




    def fiile(self):

        localctx = CymbolParser.FiileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_fiile)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 36
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 34
                    self.funcDecl()
                    pass

                elif la_ == 2:
                    self.state = 35
                    self.varDecl()
                    pass


                self.state = 38 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==CymbolParser.TYPEINT or _la==CymbolParser.TYPEVOID):
                    break

            self.state = 41
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 40
                self.match(CymbolParser.EOF)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tyype(self):
            return self.getTypedRuleContext(CymbolParser.TyypeContext,0)


        def ID(self):
            return self.getToken(CymbolParser.ID, 0)

        def SEMICOLON(self):
            return self.getToken(CymbolParser.SEMICOLON, 0)

        def AS(self):
            return self.getToken(CymbolParser.AS, 0)

        def expr(self):
            return self.getTypedRuleContext(CymbolParser.ExprContext,0)


        def getRuleIndex(self):
            return CymbolParser.RULE_varDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecl" ):
                return visitor.visitVarDecl(self)
            else:
                return visitor.visitChildren(self)




    def varDecl(self):

        localctx = CymbolParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_varDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self.tyype()
            self.state = 44
            self.match(CymbolParser.ID)
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CymbolParser.AS:
                self.state = 45
                self.match(CymbolParser.AS)
                self.state = 46
                self.expr(0)


            self.state = 49
            self.match(CymbolParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TyypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CymbolParser.RULE_tyype

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FormTypeIntContext(TyypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CymbolParser.TyypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TYPEINT(self):
            return self.getToken(CymbolParser.TYPEINT, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormTypeInt" ):
                return visitor.visitFormTypeInt(self)
            else:
                return visitor.visitChildren(self)


    class FormTypeVoidContext(TyypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CymbolParser.TyypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TYPEVOID(self):
            return self.getToken(CymbolParser.TYPEVOID, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormTypeVoid" ):
                return visitor.visitFormTypeVoid(self)
            else:
                return visitor.visitChildren(self)



    def tyype(self):

        localctx = CymbolParser.TyypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_tyype)
        try:
            self.state = 53
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CymbolParser.TYPEINT]:
                localctx = CymbolParser.FormTypeIntContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 51
                self.match(CymbolParser.TYPEINT)
                pass
            elif token in [CymbolParser.TYPEVOID]:
                localctx = CymbolParser.FormTypeVoidContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 52
                self.match(CymbolParser.TYPEVOID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tyype(self):
            return self.getTypedRuleContext(CymbolParser.TyypeContext,0)


        def ID(self):
            return self.getToken(CymbolParser.ID, 0)

        def LP(self):
            return self.getToken(CymbolParser.LP, 0)

        def RP(self):
            return self.getToken(CymbolParser.RP, 0)

        def block(self):
            return self.getTypedRuleContext(CymbolParser.BlockContext,0)


        def paramTypeList(self):
            return self.getTypedRuleContext(CymbolParser.ParamTypeListContext,0)


        def getRuleIndex(self):
            return CymbolParser.RULE_funcDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDecl" ):
                return visitor.visitFuncDecl(self)
            else:
                return visitor.visitChildren(self)




    def funcDecl(self):

        localctx = CymbolParser.FuncDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_funcDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.tyype()
            self.state = 56
            self.match(CymbolParser.ID)
            self.state = 57
            self.match(CymbolParser.LP)
            self.state = 59
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CymbolParser.TYPEINT or _la==CymbolParser.TYPEVOID:
                self.state = 58
                self.paramTypeList()


            self.state = 61
            self.match(CymbolParser.RP)
            self.state = 62
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamTypeListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paramType(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CymbolParser.ParamTypeContext)
            else:
                return self.getTypedRuleContext(CymbolParser.ParamTypeContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CymbolParser.COMMA)
            else:
                return self.getToken(CymbolParser.COMMA, i)

        def getRuleIndex(self):
            return CymbolParser.RULE_paramTypeList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamTypeList" ):
                return visitor.visitParamTypeList(self)
            else:
                return visitor.visitChildren(self)




    def paramTypeList(self):

        localctx = CymbolParser.ParamTypeListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_paramTypeList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.paramType()
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CymbolParser.COMMA:
                self.state = 65
                self.match(CymbolParser.COMMA)
                self.state = 66
                self.paramType()
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tyype(self):
            return self.getTypedRuleContext(CymbolParser.TyypeContext,0)


        def ID(self):
            return self.getToken(CymbolParser.ID, 0)

        def getRuleIndex(self):
            return CymbolParser.RULE_paramType

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamType" ):
                return visitor.visitParamType(self)
            else:
                return visitor.visitChildren(self)




    def paramType(self):

        localctx = CymbolParser.ParamTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_paramType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.tyype()
            self.state = 73
            self.match(CymbolParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(CymbolParser.LB, 0)

        def RB(self):
            return self.getToken(CymbolParser.RB, 0)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CymbolParser.StatContext)
            else:
                return self.getTypedRuleContext(CymbolParser.StatContext,i)


        def getRuleIndex(self):
            return CymbolParser.RULE_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = CymbolParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(CymbolParser.LB)
            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CymbolParser.TYPEINT) | (1 << CymbolParser.TYPEVOID) | (1 << CymbolParser.IF) | (1 << CymbolParser.RETURN) | (1 << CymbolParser.LP) | (1 << CymbolParser.NOT) | (1 << CymbolParser.PLUS) | (1 << CymbolParser.MINUS) | (1 << CymbolParser.ID) | (1 << CymbolParser.INT))) != 0):
                self.state = 76
                self.stat()
                self.state = 81
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 82
            self.match(CymbolParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignStatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CymbolParser.ID, 0)

        def AS(self):
            return self.getToken(CymbolParser.AS, 0)

        def expr(self):
            return self.getTypedRuleContext(CymbolParser.ExprContext,0)


        def SEMICOLON(self):
            return self.getToken(CymbolParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return CymbolParser.RULE_assignStat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignStat" ):
                return visitor.visitAssignStat(self)
            else:
                return visitor.visitChildren(self)




    def assignStat(self):

        localctx = CymbolParser.AssignStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_assignStat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(CymbolParser.ID)
            self.state = 85
            self.match(CymbolParser.AS)
            self.state = 86
            self.expr(0)
            self.state = 87
            self.match(CymbolParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(CymbolParser.RETURN, 0)

        def SEMICOLON(self):
            return self.getToken(CymbolParser.SEMICOLON, 0)

        def expr(self):
            return self.getTypedRuleContext(CymbolParser.ExprContext,0)


        def getRuleIndex(self):
            return CymbolParser.RULE_returnStat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStat" ):
                return visitor.visitReturnStat(self)
            else:
                return visitor.visitChildren(self)




    def returnStat(self):

        localctx = CymbolParser.ReturnStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_returnStat)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(CymbolParser.RETURN)
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CymbolParser.LP) | (1 << CymbolParser.NOT) | (1 << CymbolParser.PLUS) | (1 << CymbolParser.MINUS) | (1 << CymbolParser.ID) | (1 << CymbolParser.INT))) != 0):
                self.state = 90
                self.expr(0)


            self.state = 93
            self.match(CymbolParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfElseStatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifStat(self):
            return self.getTypedRuleContext(CymbolParser.IfStatContext,0)


        def elseStat(self):
            return self.getTypedRuleContext(CymbolParser.ElseStatContext,0)


        def getRuleIndex(self):
            return CymbolParser.RULE_ifElseStat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfElseStat" ):
                return visitor.visitIfElseStat(self)
            else:
                return visitor.visitChildren(self)




    def ifElseStat(self):

        localctx = CymbolParser.IfElseStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_ifElseStat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.ifStat()
            self.state = 97
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 96
                self.elseStat()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfElseExprStatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(CymbolParser.BlockContext,0)


        def ifElseStat(self):
            return self.getTypedRuleContext(CymbolParser.IfElseStatContext,0)


        def returnStat(self):
            return self.getTypedRuleContext(CymbolParser.ReturnStatContext,0)


        def assignStat(self):
            return self.getTypedRuleContext(CymbolParser.AssignStatContext,0)


        def exprStat(self):
            return self.getTypedRuleContext(CymbolParser.ExprStatContext,0)


        def getRuleIndex(self):
            return CymbolParser.RULE_ifElseExprStat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfElseExprStat" ):
                return visitor.visitIfElseExprStat(self)
            else:
                return visitor.visitChildren(self)




    def ifElseExprStat(self):

        localctx = CymbolParser.IfElseExprStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_ifElseExprStat)
        try:
            self.state = 104
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 99
                self.block()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 100
                self.ifElseStat()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 101
                self.returnStat()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 102
                self.assignStat()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 103
                self.exprStat()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprStatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(CymbolParser.ExprContext,0)


        def SEMICOLON(self):
            return self.getToken(CymbolParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return CymbolParser.RULE_exprStat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprStat" ):
                return visitor.visitExprStat(self)
            else:
                return visitor.visitChildren(self)




    def exprStat(self):

        localctx = CymbolParser.ExprStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_exprStat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.expr(0)
            self.state = 107
            self.match(CymbolParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CymbolParser.ExprContext)
            else:
                return self.getTypedRuleContext(CymbolParser.ExprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CymbolParser.COMMA)
            else:
                return self.getToken(CymbolParser.COMMA, i)

        def getRuleIndex(self):
            return CymbolParser.RULE_exprList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprList" ):
                return visitor.visitExprList(self)
            else:
                return visitor.visitChildren(self)




    def exprList(self):

        localctx = CymbolParser.ExprListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_exprList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.expr(0)
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CymbolParser.COMMA:
                self.state = 110
                self.match(CymbolParser.COMMA)
                self.state = 111
                self.expr(0)
                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(CymbolParser.IF, 0)

        def LP(self):
            return self.getToken(CymbolParser.LP, 0)

        def expr(self):
            return self.getTypedRuleContext(CymbolParser.ExprContext,0)


        def RP(self):
            return self.getToken(CymbolParser.RP, 0)

        def ifElseExprStat(self):
            return self.getTypedRuleContext(CymbolParser.IfElseExprStatContext,0)


        def getRuleIndex(self):
            return CymbolParser.RULE_ifStat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStat" ):
                return visitor.visitIfStat(self)
            else:
                return visitor.visitChildren(self)




    def ifStat(self):

        localctx = CymbolParser.IfStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_ifStat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(CymbolParser.IF)
            self.state = 118
            self.match(CymbolParser.LP)
            self.state = 119
            self.expr(0)
            self.state = 120
            self.match(CymbolParser.RP)
            self.state = 121
            self.ifElseExprStat()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseStatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(CymbolParser.ELSE, 0)

        def ifElseExprStat(self):
            return self.getTypedRuleContext(CymbolParser.IfElseExprStatContext,0)


        def getRuleIndex(self):
            return CymbolParser.RULE_elseStat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElseStat" ):
                return visitor.visitElseStat(self)
            else:
                return visitor.visitChildren(self)




    def elseStat(self):

        localctx = CymbolParser.ElseStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_elseStat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(CymbolParser.ELSE)
            self.state = 124
            self.ifElseExprStat()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(CymbolParser.VarDeclContext,0)


        def ifElseStat(self):
            return self.getTypedRuleContext(CymbolParser.IfElseStatContext,0)


        def returnStat(self):
            return self.getTypedRuleContext(CymbolParser.ReturnStatContext,0)


        def assignStat(self):
            return self.getTypedRuleContext(CymbolParser.AssignStatContext,0)


        def exprStat(self):
            return self.getTypedRuleContext(CymbolParser.ExprStatContext,0)


        def getRuleIndex(self):
            return CymbolParser.RULE_stat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat" ):
                return visitor.visitStat(self)
            else:
                return visitor.visitChildren(self)




    def stat(self):

        localctx = CymbolParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_stat)
        try:
            self.state = 131
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.varDecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                self.ifElseStat()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 128
                self.returnStat()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 129
                self.assignStat()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 130
                self.exprStat()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CymbolParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class SignedExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CymbolParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(CymbolParser.ExprContext,0)

        def PLUS(self):
            return self.getToken(CymbolParser.PLUS, 0)
        def MINUS(self):
            return self.getToken(CymbolParser.MINUS, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSignedExpr" ):
                return visitor.visitSignedExpr(self)
            else:
                return visitor.visitChildren(self)


    class FunctionCallExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CymbolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(CymbolParser.ID, 0)
        def LP(self):
            return self.getToken(CymbolParser.LP, 0)
        def RP(self):
            return self.getToken(CymbolParser.RP, 0)
        def exprList(self):
            return self.getTypedRuleContext(CymbolParser.ExprListContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionCallExpr" ):
                return visitor.visitFunctionCallExpr(self)
            else:
                return visitor.visitChildren(self)


    class MulDivExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CymbolParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CymbolParser.ExprContext)
            else:
                return self.getTypedRuleContext(CymbolParser.ExprContext,i)

        def MUL(self):
            return self.getToken(CymbolParser.MUL, 0)
        def DIV(self):
            return self.getToken(CymbolParser.DIV, 0)
